# gencrypto

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/aes/: aes-avr5.cpp
src/ascon/: ascon-avr5-main.cpp  ascon-avr5-x2.cpp  ascon-avr5-x3.cpp  ascon-avr5.cpp  ascon-avr5.h
src/avr/: code.cpp  code.h  code_out.cpp  interpret.cpp
src/common/: codegen.cpp  codegen.h  copyright.h  insns.cpp  insns.h  main.cpp  platform.cpp  platform.h  platform_arm.cpp  platform_arm.h  registry.cpp  registry.h  regs.cpp  regs.h  testvector.cpp  testvector.h
src/keccak/: keccakp-1600-avr5.cpp  keccakp-200-avr5.cpp  keccakp-400-avr5.cpp
src/sha256/: sha256-avr5.cpp
src/tinyjambu/: tinyjambu-avr5.cpp
src/xoodoo/: xoodoo-avr5.cpp
templates/: ascon-avr5.txt  ascon-x2-avr5.txt  ascon-x3-avr5.txt
templates/aes/: aes-avr5.txt
templates/ascon/: ascon-avr5-x2.txt  ascon-avr5-x3.txt  ascon-avr5.txt
templates/keccak/: keccakp-1600-avr5.txt  keccakp-200-avr5.txt  keccakp-400-avr5.txt
templates/sha256/: sha256-avr5.txt
templates/tinyjambu/: tinyjambu-128-avr5.txt  tinyjambu-192-avr5.txt  tinyjambu-256-avr5.txt
templates/xoodoo/: xoodoo-avr5.txt
test/: CMakeLists.txt
test/vectors/: aes.txt  ascon.txt  keccak.txt  sha256.txt  tinyjambu.txt  xoodoo.txt
